<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="356dp"
        android:layout_height="164dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_results"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/main_results"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="293dp" />

        <Button
            android:id="@+id/btn_nextraces"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:onClick="onClick"
            android:text="@string/main_nextraces"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="148dp" />

        <Button
            android:id="@+id/btn_members"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/main_members"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="47dp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>